--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,43 @@
+body{
+    background-color: black;
+    background-image: url(../images/background.jpeg);
+}
+
+div{
+    padding: 10px 0;
+}
+
+.header{
+    border-bottom: 2px solid black;
+}
+
+.container{
+    background-color: white;
+    text-align: center;
+}
+
+h1{
+    font-family: 'Staatliches', cursive;
+    font-size: 30px;
+    padding: 20px;
+    margin:30px 30px 0 30px;
+}
+
+h2{
+    font-family: 'Staatliches', cursive;
+    font-size: 20px;
+}
+
+button{
+    font-family: 'Staatliches', cursive;
+    font-size: 15px;
+    padding:10px 30px;
+    margin: 50px 20px;
+    background-color: green;
+    border-color: green;
+}
+
+#placeholders{
+    letter-spacing: 2px;
+}
 
